-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.8
-
None
-
98ebeff4c (dev), 4ca6a50e8 (6.8)
If points are all replaced no update is called so the view is not refreshed.
For Gerrit Dashboard: QTBUG-129336 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
593657,3 | Connect pointsReplaced to update | dev | qt/qtgraphs | Status: MERGED | +2 | 0 |
593872,2 | Connect pointsReplaced to update | 6.8 | qt/qtgraphs | Status: MERGED | +2 | 0 |