Connect pointsReplaced to update

When all points were replaced, the view wasn't updated due to this
missing connection.

Fixes: QTBUG-129336
Change-Id: Ib7ae8bf28bf09ded5f9dbbccb230c29ce97103c4
Reviewed-by: Tomi Korpipää <tomi.korpipaa@qt.io>
(cherry picked from commit 98ebeff4c74ceb5d7bea97658089483112a0c85e)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>